--- a/less/home-page.less
+++ b/less/home-page.less
@@ -138,6 +138,10 @@
           margin-left: 1rem;
         }
       }
+
+      @media @mobile {
+        width: 100%;
+      }
     }
   }
 
